# envgs

./: .env  .gitignore  .gitmodules  README.md  count_sparse_points3d.py  detect_ground_plane.ipynb  export_splat.ipynb  fix_colmap.py  foreground_validation_metrics.ipynb  main.py  minimal_pyproject.toml  normal_consistency_colmap.ipynb  observations.txt  prepare_sedan_nobg.ipynb  profile_render.py  profile_render_sedan.py  pyproject.toml  rescale_colmap_intrinsics.py  setup_cu128.sh  simple_render.ipynb  summarize_result_metrics.py  webui.py
easyvolcap/: pyproject.toml
easyvolcap/configs/datasets/envgs/: audi.yaml
easyvolcap/configs/datasets/huk/: audi_nbg.yaml  audi_silver.yaml  bmw_nbg.yaml  bmw_rain.yaml  hyundai_white.yaml  matthias_metric3d_fixed.yaml  matthias_stablenormal.yaml  mercedes_outside_orbit_1.yaml  mercedes_outside_orbit_2.yaml  mitsubishi_totaled.yaml  radu_stablenormal.yaml  renault_white_rain.yaml  vw_rain.yaml
easyvolcap/configs/datasets/ref_real/: sedan.yaml  sedan_mast3r.yaml
easyvolcap/configs/exps/envgs/huk/: audi_silver.yaml  mercedes_orbit_1.yaml  mitsubishi_totaled.yaml  vw_rain.yaml
easyvolcap/configs/exps/envgs/ref_real/: envgs_sedan_mast3r.yaml
easyvolcap/easyvolcap/dataloaders/datasets/: volumetric_video_dataset.py
easyvolcap/easyvolcap/runners/: volumetric_video_viewer.py
easyvolcap/easyvolcap/scripts/: main.py  wrap.py
easyvolcap/easyvolcap/utils/: colmap_utils.py  gaussian2d_utils.py  import_utils.py  optix_utils.py
easyvolcap/scripts/colmap/: colmap_to_easyvolcap.py
easyvolcap/scripts/preprocess/: colmap_to_easyvolcap.py
easyvolcap/scripts/preprocess/tools/: compute_metadata.py
preprocessing/: extract_frames_subfolders.py  optical_flow_vis.ipynb  sample_frames.ipynb  sample_frames_ecc.py  sample_frames_optical_flow.py  test_homography_ecc.ipynb
preprocessing/optical_flow_dashboard/: README.md  app.py  requirements.txt
